--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,10 @@ margin: 0 200px;
     list-style: none;
     padding-inline-start: 0;
 }
-
+ a {
+  text-decoration: none;
+    color: black;
+}
 .navbar-items li {
   margin-right: 100px;
   transition: all 0.2s ease-in-out;
