--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,11 @@ body {
   transition: all 0.3s ease-in-out;
   border: 1px solid black;
   color: black;
+  text-decoration: none;
+  align-self: center;
 }
+
+
 
 .section4-button:hover {
   color: white;
